broken link fix

--- a/examples/Food_recommendation/main.ipynb
+++ b/examples/Food_recommendation/main.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#install packages\n",
+    "# install packages\n",
     "!pip install pandas\n",
     "!pip install lancedb"
    ]
@@ -67,8 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loading and Merging Data into a Single File\n",
+    "# Loading and Merging Data into a Single File\n",
     "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"main_food.csv\")\n",
     "df_rating = pd.read_csv(\"ratings.csv\")"
    ]
@@ -79,9 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "main_df = pd.merge(df_rating, df, on='Food_ID', how='inner')\n",
-    "main_df.to_csv('main_df.csv')"
+    "main_df = pd.merge(df_rating, df, on=\"Food_ID\", how=\"inner\")\n",
+    "main_df.to_csv(\"main_df.csv\")"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Now, open the main file which contains both merged datasets.\n",
+    "# Now, open the main file which contains both merged datasets.\n",
     "df = pd.read_csv(\"main_df.csv\")"
    ]
   },
@@ -229,7 +229,10 @@
    "outputs": [],
    "source": [
     "# We are adding all important columns into the text column to enhance full-text search (FTS) and overall search performance.\n",
-    "df['text'] = df.apply(lambda row: f\"{row['Name']} {row['C_Type']} {row['Veg_Non']}: {row['Describe']}\", axis=1)"
+    "df[\"text\"] = df.apply(\n",
+    "    lambda row: f\"{row['Name']} {row['C_Type']} {row['Veg_Non']}: {row['Describe']}\",\n",
+    "    axis=1,\n",
+    ")"
    ]
   },
   {
@@ -250,7 +253,7 @@
    ],
    "source": [
     "# just chcking our text data\n",
-    "df['text'][0]"
+    "df[\"text\"][0]"
    ]
   },
   {
@@ -405,11 +408,20 @@
    "source": [
     "# Create a mapping from numbers to strings\n",
     "num_to_string = {\n",
-    "    0.0: 'zero', 1.0: 'one', 2.0: 'two', 3.0: 'three', 4.0: 'four',\n",
-    "    5.0: 'five', 6.0: 'six', 7.0: 'seven', 8.0: 'eight', 9.0: 'nine', 10.0: 'ten'\n",
+    "    0.0: \"zero\",\n",
+    "    1.0: \"one\",\n",
+    "    2.0: \"two\",\n",
+    "    3.0: \"three\",\n",
+    "    4.0: \"four\",\n",
+    "    5.0: \"five\",\n",
+    "    6.0: \"six\",\n",
+    "    7.0: \"seven\",\n",
+    "    8.0: \"eight\",\n",
+    "    9.0: \"nine\",\n",
+    "    10.0: \"ten\",\n",
     "}\n",
     "# Replace numerical ratings with their string equivalents\n",
-    "df['Rating_str'] = df['Rating'].map(num_to_string)"
+    "df[\"Rating_str\"] = df[\"Rating\"].map(num_to_string)"
    ]
   },
   {
@@ -418,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Rating'] = df['Rating'].astype(int)"
+    "df[\"Rating\"] = df[\"Rating\"].astype(int)"
    ]
   },
   {
@@ -567,7 +579,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['text'] = df.apply(lambda row: f\"{row['text']} rating: {row['Rating']} {row['Rating_str']}\", axis=1)"
+    "df[\"text\"] = df.apply(\n",
+    "    lambda row: f\"{row['text']} rating: {row['Rating']} {row['Rating_str']}\", axis=1\n",
+    ")"
    ]
   },
   {
@@ -716,7 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(['User_ID', 'Describe','Unnamed: 0','Rating_str'], axis=1)"
+    "df = df.drop([\"User_ID\", \"Describe\", \"Unnamed: 0\", \"Rating_str\"], axis=1)"
    ]
   },
   {
@@ -835,7 +849,7 @@
    "outputs": [],
    "source": [
     "# Saving our data\n",
-    "df.to_csv('final_food_recom_data.csv')"
+    "df.to_csv(\"final_food_recom_data.csv\")"
    ]
   },
   {
@@ -846,7 +860,8 @@
    "source": [
     "# your openai api key for embedding model\n",
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = 'sk-proj-'"
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-proj-\""
    ]
   },
   {
@@ -978,16 +993,13 @@
     "import numpy as np\n",
     "\n",
     "import lancedb\n",
-    "from lancedb.embeddings import (\n",
-    "    EmbeddingFunctionRegistry,\n",
-    "    get_registry\n",
-    ")\n",
+    "from lancedb.embeddings import EmbeddingFunctionRegistry, get_registry\n",
     "from lancedb.pydantic import LanceModel, Vector\n",
     "from lancedb.rerankers import (\n",
     "    ColbertReranker,\n",
     "    JinaReranker,\n",
     "    CohereReranker,\n",
-    "    LinearCombinationReranker\n",
+    "    LinearCombinationReranker,\n",
     ")\n",
     "\n",
     "\n",
@@ -997,34 +1009,37 @@
     "registry = EmbeddingFunctionRegistry.get_instance()\n",
     "func = registry.get(\"sentence-transformers\").create(device=\"cpu\")\n",
     "\n",
-    "#uncomment below things for openai embeddings\n",
-    "# openai embeddings \n",
+    "# uncomment below things for openai embeddings\n",
+    "# openai embeddings\n",
     "# func = get_registry().get(\"openai\").create(name=\"text-embedding-ada-002\")\n",
     "\n",
-    "class Words(LanceModel):\n",
     "\n",
-    "    text: str = func.SourceField()       # Text column is combinations of all columns\n",
-    "    Food_ID: str = func.SourceField()    # food id is food store name\n",
-    "    Name: str = func.SourceField()       #Name of menu\n",
-    "    Rating : str = func.SourceField()    # Rating given by users\n",
-    "    C_Type: str = func.SourceField()     # category type of food\n",
-    "    Veg_Non:str = func.SourceField()     # type of food its veg or non-veg\n",
+    "class Words(LanceModel):\n",
+    "    text: str = func.SourceField()  # Text column is combinations of all columns\n",
+    "    Food_ID: str = func.SourceField()  # food id is food store name\n",
+    "    Name: str = func.SourceField()  # Name of menu\n",
+    "    Rating: str = func.SourceField()  # Rating given by users\n",
+    "    C_Type: str = func.SourceField()  # category type of food\n",
+    "    Veg_Non: str = func.SourceField()  # type of food its veg or non-veg\n",
     "    vector: Vector(func.ndims()) = func.VectorField()\n",
+    "\n",
     "\n",
     "table = db.create_table(\"food_recommandations\", schema=Words, mode=\"overwrite\")\n",
     "table.add(data=df)\n",
     "\n",
-    "#Full text search support\n",
-    "table.create_fts_index(\"text\",replace=True)\n",
+    "# Full text search support\n",
+    "table.create_fts_index(\"text\", replace=True)\n",
     "\n",
-    "# check our guidance for othe for reranker  models https://lancedb.github.io/lancedb/reranking/ \n",
-    "#reranker = JinaReranker(api_key=\"key\")\n",
+    "# check our guidance for othe for reranker  models https://lancedb.github.io/lancedb/reranking/\n",
+    "# reranker = JinaReranker(api_key=\"key\")\n",
     "reranker = ColbertReranker()\n",
     "\n",
-    "query  = ' 6 rating non-veg meal ' \n",
+    "query = \" 6 rating non-veg meal \"\n",
     "\n",
-    "#lance_reranker_hybrid = table.search(query, query_type=\"hybrid\").rerank(reranker=reranker).limit(5).to_pandas()    # use Hybrid search also \n",
-    "lance_reranker_fts = table.search(query, query_type=\"fts\").rerank(reranker=reranker).limit(4).to_pandas() \n",
+    "# lance_reranker_hybrid = table.search(query, query_type=\"hybrid\").rerank(reranker=reranker).limit(5).to_pandas()    # use Hybrid search also\n",
+    "lance_reranker_fts = (\n",
+    "    table.search(query, query_type=\"fts\").rerank(reranker=reranker).limit(4).to_pandas()\n",
+    ")\n",
     "\n",
     "lance_reranker_fts"
    ]
@@ -1047,13 +1062,19 @@
     }
    ],
    "source": [
-    "#recommendations\n",
+    "# recommendations\n",
     "def get_recommendations(query):\n",
-    "    results = table.search(query, query_type=\"fts\").rerank(reranker=reranker).limit(4).to_pandas()\n",
-    "    return results[['Food_ID', 'Name','C_Type', 'Veg_Non','Rating']]\n",
+    "    results = (\n",
+    "        table.search(query, query_type=\"fts\")\n",
+    "        .rerank(reranker=reranker)\n",
+    "        .limit(4)\n",
+    "        .to_pandas()\n",
+    "    )\n",
+    "    return results[[\"Food_ID\", \"Name\", \"C_Type\", \"Veg_Non\", \"Rating\"]]\n",
+    "\n",
     "\n",
     "# Example usage\n",
-    "query = 'give me rating 6 non-veg food '\n",
+    "query = \"give me rating 6 non-veg food \"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1083,7 +1104,7 @@
    ],
    "source": [
     "# Example usage\n",
-    "query = 'Non veg food near me '\n",
+    "query = \"Non veg food near me \"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1106,7 +1127,7 @@
     }
    ],
    "source": [
-    "query = ' rating 8 '\n",
+    "query = \" rating 8 \"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1135,11 +1156,10 @@
     }
    ],
    "source": [
-    "\n",
-    "query = 'red wine with chicken'\n",
+    "query = \"red wine with chicken\"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)\n",
-    "#here we have only one non veg with rating 9 so getting"
+    "# here we have only one non veg with rating 9 so getting"
    ]
   },
   {
@@ -1166,11 +1186,10 @@
     }
    ],
    "source": [
-    "\n",
-    "query = 'veg food with rating 6'\n",
+    "query = \"veg food with rating 6\"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)\n",
-    "#here we have only one non veg with rating 9 so getting"
+    "# here we have only one non veg with rating 9 so getting"
    ]
   },
   {
@@ -1191,7 +1210,7 @@
     }
    ],
    "source": [
-    "query = ' veg  food menu only'\n",
+    "query = \" veg  food menu only\"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1215,7 +1234,7 @@
    ],
    "source": [
     "# Example usage\n",
-    "query = 'rice with chicken spicy  '\n",
+    "query = \"rice with chicken spicy  \"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1239,7 +1258,7 @@
    ],
    "source": [
     "# Example usage\n",
-    "query = 'coffee '\n",
+    "query = \"coffee \"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
@@ -1263,7 +1282,7 @@
    ],
    "source": [
     "# Example usage\n",
-    "query = 'soup chinese please'\n",
+    "query = \"soup chinese please\"\n",
     "recommendations = get_recommendations(query)\n",
     "print(recommendations)"
    ]
