--- a/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
+++ b/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
@@ -129,8 +129,9 @@
    "outputs": [],
    "source": [
     "# Load text\n",
-    "\n",
     "!wget https://raw.githubusercontent.com/lancedb/vectordb-recipes/main/tutorials/RAG-from-Scratch/lease.txt\n",
+    "\n",
+    "# !wget link\n",
     "with open(\"lease.txt\", \"r\") as file:\n",
     "    text_data = file.read()"
    ]
@@ -619,20 +620,8 @@
    "name": "python3"
   },
   "language_info": {
-<<<<<<< HEAD
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.12"
-=======
-   "name": "python"
->>>>>>> 29d840af5f7d41dbf6cf47bf5bbd3dad8b102fca
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
