--- a/examples/multi-document-agentic-rag/main.ipynb
+++ b/examples/multi-document-agentic-rag/main.ipynb
@@ -345,7 +345,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Creating relevant Vector Store"
+        "### Creating relevant Vector Store\n",
+        "\n",
+        "We are going to create different lancedb vector stores, each associated with a specific table in a local database (`./lancedb`). The tables store data related to different aspects of automotive data, which is defined in our json files,  such as problems, parts, diagnostics, cost estimates, and maintenance schedules."
       ]
     },
     {
@@ -398,7 +400,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Create the retrievers objects"
+        "### Create the retrievers objects\n",
+        "\n",
+        "Retrievers objects are python objects that are used to retrieve the relevant data from the database. Each retriever is specific to the type of data that we want to retrieve."
       ]
     },
     {
@@ -493,7 +497,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Creating Function tools and setting up Agent"
+        "### Creating Function tools and setting up Agent\n",
+        "\n",
+        "`FunctionTool` from LLamaIndex provides a suitable interface for writing functions that can be used as the tools when we set up our `Agent`.  Apart from the core tools, we are going to set up some additional helper tools that uses other tools in abstraction way! "
       ]
     },
     {
