langchain version fix

--- a/examples/Contextual-Compression-with-RAG/main.ipynb
+++ b/examples/Contextual-Compression-with-RAG/main.ipynb
@@ -83,7 +83,6 @@
    "source": [
     "from langchain.llms import HuggingFaceHub\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from langchain.vectorstores import Chroma\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.embeddings import SentenceTransformerEmbeddings\n",
     "from langchain.prompts import PromptTemplate\n",
@@ -512,6 +511,31 @@
    },
    "source": [
     "### Instantiate VectorStore (LanceDB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "09ce605a-93ab-4734-8784-3b57dd330722",
+   "metadata": {
+    "id": "09ce605a-93ab-4734-8784-3b57dd330722"
+   },
+   "outputs": [],
+   "source": [
+    "import lancedb\n",
+    "\n",
+    "context_data = lancedb.connect(\"./.lancedb\")\n",
+    "table = context_data.create_table(\n",
+    "    \"context\",\n",
+    "    data=[\n",
+    "        {\n",
+    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
+    "            \"text\": \"Hello World\",\n",
+    "            \"id\": \"1\",\n",
+    "        }\n",
+    "    ],\n",
+    "    mode=\"overwrite\",\n",
+    ")"
    ]
   },
   {
