--- a/tutorials/GraphRAG_CSV/main.ipynb
+++ b/tutorials/GraphRAG_CSV/main.ipynb
@@ -1,27 +1,13 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "#GraphRAG with csv"
-   ],
    "metadata": {
     "id": "B0JDWdB6p99G"
-   }
+   },
+   "source": [
+    "#GraphRAG with csv"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,8 +21,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Collecting graphrag\n",
       "  Downloading graphrag-0.3.0-py3-none-any.whl.metadata (6.1 kB)\n",
@@ -359,27 +345,21 @@
     }
    ],
    "source": [
-    "!pip install graphrag"
+    "!pip install graphrag==0.1.1"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#Download the Dataset"
-   ],
    "metadata": {
     "id": "RH05VrhSqDgD"
-   }
+   },
+   "source": [
+    "#Download the Dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "# Create the directory structure\n",
-    "!mkdir -p /content/input_people_csv/input\n",
-    "\n",
-    "!wget -P /content/input_people_csv/input https://github.com/akashAD98/dummy_data/blob/main/Lancedbai_Full_Employees_GraphRAG_With_DOB.csv\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -387,11 +367,10 @@
     "id": "OojxDkRGr6nb",
     "outputId": "963d76d5-336b-4b50-f815-571a76186a36"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "--2024-08-17 14:16:43--  https://github.com/akashAD98/dummy_data/blob/main/Lancedbai_Full_Employees_GraphRAG_With_DOB.csv\n",
       "Resolving github.com (github.com)... 140.82.112.4\n",
@@ -406,54 +385,59 @@
       "\n"
      ]
     }
+   ],
+   "source": [
+    "\n",
+    "# Create the directory structure\n",
+    "!mkdir -p /content/input_people_csv/input\n",
+    "\n",
+    "!wget -P /content/input_people_csv/input https://github.com/akashAD98/dummy_data/blob/main/Lancedbai_Full_Employees_GraphRAG_With_DOB.csv\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#openai api key"
-   ],
    "metadata": {
     "id": "XBz38K0SqaUx"
-   }
+   },
+   "source": [
+    "#openai api key"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "h06bzT6Y2_sy"
+   },
+   "outputs": [],
    "source": [
     "import os\n",
     "import getpass\n",
     "\n",
     "os.environ[\"GRAPHRAG_API_KEY\"] = \"sk-proj-\""
-   ],
-   "metadata": {
-    "id": "h06bzT6Y2_sy"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#graphrag"
-   ],
    "metadata": {
     "id": "D0I-BFYBp1gN"
-   }
+   },
+   "source": [
+    "#graphrag"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### step 1: Initiate the indexing"
-   ],
    "metadata": {
     "id": "bsOZzMrmqiRj"
-   }
+   },
+   "source": [
+    "### step 1: Initiate the indexing"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.index --init --root /content/input_people_csv"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -461,11 +445,10 @@
     "id": "Bzxx0En60mWp",
     "outputId": "aa4f9c3b-a216-4d6b-b76e-a5b81fe186d9"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:22:34.515707: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:22:34.529216: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -475,22 +458,23 @@
       "⠋ GraphRAG Indexer "
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.index --init --root /content/input_people_csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Step2: *indexing* the data"
-   ],
    "metadata": {
     "id": "Kyq740rws2U9"
-   }
+   },
+   "source": [
+    "#### Step2: *indexing* the data"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.index --root /content/input_people_csv"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -498,11 +482,10 @@
     "id": "xewCpqhW1miU",
     "outputId": "7e8292b3-ee8d-49db-9062-806533fb33f2"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:30:16.009853: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:30:16.033083: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -3825,10 +3808,16 @@
       "\u001b[?25h🚀 \u001b[32mAll workflows completed successfully.\u001b[0m\n"
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.index --root /content/input_people_csv"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "p3q8gAdJrW15"
+   },
    "source": [
     "#### step 3 : Query ask quetions & get answer\n",
     "\n",
@@ -3843,16 +3832,11 @@
     "```\n",
     "\n",
     "**Local Search** for reasoning about specific entities by fanning-out to their neighbors and associated concepts."
-   ],
-   "metadata": {
-    "id": "p3q8gAdJrW15"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.query --root /content/input_people --method local  \"Divit Dara birthday date is what\""
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3860,11 +3844,10 @@
     "id": "QWNesP_S5NI_",
     "outputId": "66cf150d-cc71-4628-bb0a-463028d2bb73"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:36:14.468139: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:36:14.481952: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -3883,13 +3866,14 @@
       "SUCCESS: Local Search Response: Divit Dara's date of birth is September 3, 2000. This information highlights Divit Dara as a Full Stack Developer with expertise in both front-end and back-end development aspects, indicating a comprehensive skill set in software development. Dara is managed by Rasha Baral and is based in Bangalore, which is a significant hub for technology and innovation in India. This geographical location, combined with Dara's role and expertise, places him within a vibrant ecosystem for tech professionals [Data: Sources (30)].\n"
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.query --root /content/input_people --method local  \"Divit Dara birthday date is what\""
    ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"give me all AI engineer list of compnay \""
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3897,11 +3881,10 @@
     "id": "HfmWxX-qH5ub",
     "outputId": "be2bc382-8058-4966-adf2-e4e6fcea3341"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:37:35.017124: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:37:35.039183: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -3990,13 +3973,14 @@
       "This list showcases the vibrant ecosystem of AI professionals managed by influential figures in the tech industry. The diversity in their locations underscores the global nature of the tech industry, with major cities like Pune, Bangalore, and London serving as key hubs for AI development and innovation. The detailed information about each AI Engineer, including their managers and locations, highlights the interconnectedness of the professional network within the tech sector.\n"
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"give me all AI engineer list of compnay \""
    ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"give me employee who are wokring from london  & they are Data engineer\""
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4004,11 +3988,10 @@
     "id": "3lxbp61AICmk",
     "outputId": "4b84cae6-3339-4ba3-c92e-e799baf404ae"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:38:08.402089: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:38:08.417417: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -4045,13 +4028,14 @@
       "These professionals exemplify the diverse and global nature of London's tech ecosystem, particularly in the field of data engineering. Their work in London not only contributes to the city's technological advancements but also highlights the global interconnectedness of the tech industry.\n"
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"give me employee who are wokring from london  & they are Data engineer\""
    ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"how many people reporting to Onkar Wali\""
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4059,11 +4043,10 @@
     "id": "GJEGjw8bIEyP",
     "outputId": "c8e7d755-0855-488b-e500-6641811e3c40"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-17 11:38:41.796575: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "2024-08-17 11:38:41.812645: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
@@ -4092,16 +4075,24 @@
       "This diverse group of professionals under Onkar Wali's management underscores the wide-ranging expertise and leadership capabilities of Onkar Wali, spanning across various projects and responsibilities within the tech industry.\n"
      ]
     }
+   ],
+   "source": [
+    "!python3 -m graphrag.query --root /content/input_people_csv --method local  \"how many people reporting to Onkar Wali\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "source": [],
-   "metadata": {
-    "id": "onEk5bnoINii"
-   },
-   "execution_count": null,
-   "outputs": []
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
