--- a/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
+++ b/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
@@ -600,7 +600,7 @@
     "# llm\n",
     "prompt = f\"{base_prompt.format(question, context)}\"\n",
     "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-3.5-turbo-16k-0613\",\n",
+    "    model=\"gpt-4o\",\n",
     "    temperature=0,\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": prompt},\n",
