--- a/examples/Graphrag/main.ipynb
+++ b/examples/Graphrag/main.ipynb
@@ -5856,12 +5856,14 @@
     "\n",
     "token_encoder = tiktoken.get_encoding(\"cl100k_base\")\n",
     "\n",
-    "INPUT_DIR = \"/content/rag_exim/output/\"  # path of output folder which has all parquete files\n",
+    "INPUT_DIR = (\n",
+    "    \"/content/rag_exim/output/\"  # path of output folder which has all parquete files\n",
+    ")\n",
     "\n",
     "for f in os.listdir(INPUT_DIR):\n",
-    "    for artifact in os.listdir(INPUT_DIR+f):\n",
+    "    for artifact in os.listdir(INPUT_DIR + f):\n",
     "        if artifact == \"artifacts\":\n",
-    "            artifacts_directory = INPUT_DIR+f+\"/artifacts/\"\n",
+    "            artifacts_directory = INPUT_DIR + f + \"/artifacts/\"\n",
     "            break\n",
     "\n",
     "INPUT_DIR = artifacts_directory\n",
