--- a/examples/AI-Trends-with-CrewAI/CrewAI_AI_Trends.ipynb
+++ b/examples/AI-Trends-with-CrewAI/CrewAI_AI_Trends.ipynb
@@ -292,11 +292,13 @@
    "outputs": [],
    "source": [
     "from crewai_tools import BaseTool\n",
+    "\n",
+    "\n",
     "class SearchNewsDB(BaseTool):\n",
     "    def __init__(self):\n",
     "        super().__init__(\n",
     "            name=\"News DB Tool\",\n",
-    "            description=\"Fetch and process news articles from various sources\"\n",
+    "            description=\"Fetch and process news articles from various sources\",\n",
     "        )\n",
     "\n",
     "    def _run(self, query: str):\n",
@@ -341,7 +343,7 @@
     "            except Exception as e:\n",
     "                return f\"Error indexing documents: {e}\"\n",
     "        else:\n",
-    "            return \"No content available for processing.\"\n"
+    "            return \"No content available for processing.\""
    ]
   },
   {
@@ -365,7 +367,7 @@
     "    def __init__(self):\n",
     "        super().__init__(\n",
     "            name=\"Get News Tool\",\n",
-    "            description=\"Search LanceDB for relevant news information based on a query\"\n",
+    "            description=\"Search LanceDB for relevant news information based on a query\",\n",
     "        )\n",
     "\n",
     "    def _run(self, query: str) -> str:\n",
