fix cloud examples

--- a/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install -U langchain langchain-openai langchain-community"
+    "! pip install -U langchain langchain-openai langchain-community \"httpx<0.28\""
    ]
   },
   {
@@ -251,7 +251,7 @@
     "for p in tqdm(Path(\"numpy_docs\").rglob(\"*.html\")):\n",
     "    if p.is_dir():\n",
     "        continue\n",
-    "    loader = UnstructuredHTMLLoader(p)\n",
+    "    loader = UnstructuredHTMLLoader(str(p))\n",
     "    raw_document = loader.load()\n",
     "    # docs.append(raw_document)\n",
     "    title = get_document_title(raw_document)\n",
