--- a/examples/RAG_Reranking/lancedb_cloud/main.ipynb
+++ b/examples/RAG_Reranking/lancedb_cloud/main.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -491,10 +491,9 @@
     }
    ],
    "source": [
-    "from FlagEmbedding import (\n",
-    "    LLMEmbedder,\n",
-    "    FlagReranker,\n",
-    ")  # Al document present here https://github.com/FlagOpen/FlagEmbedding/tree/master\n",
+    "# All document present here https://github.com/FlagOpen/FlagEmbedding/tree/master\n",
+    "\n",
+    "from FlagEmbedding import FlagAutoModel, FlagAutoReranker\n",
     "import os\n",
     "import lancedb\n",
     "import re\n",
@@ -510,13 +509,14 @@
     "\n",
     "\n",
     "task = \"qa\"  # Encode for a specific task (qa, icl, chat, lrlm, tool, convsearch)\n",
-    "embed_model = LLMEmbedder(\n",
-    "    \"BAAI/llm-embedder\", use_fp16=False\n",
-    ")  # Load model (automatically use GPUs)\n",
     "\n",
-    "reranker_model = FlagReranker(\n",
+    "# Load model (automatically use GPUs)\n",
+    "embed_model = FlagAutoModel.from_finetuned(\"BAAI/bge-base-en\", use_fp16=False)\n",
+    "\n",
+    "# use_fp16 speeds up computation with a slight performance degradation\n",
+    "reranker_model = FlagAutoReranker.from_finetuned(\n",
     "    \"BAAI/bge-reranker-base\", use_fp16=True\n",
-    ")  # use_fp16 speeds up computation with a slight performance degradation\n",
+    ")\n",
     "\n",
     "# For basic splitting\n",
     "# basic_text_splitter = RecursiveCharacterTextSplitter(chunk_size=512, chunk_overlap=64,) # 512 is the default Embedding model max_len\n",
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1425,7 +1425,7 @@
     "    Search a query from the table\n",
     "    \"\"\"\n",
     "    query_vector = embed_model.encode_queries(\n",
-    "        query, task=task\n",
+    "        query\n",
     "    )  # Encode the QUERY (it is done differently than the 'key')\n",
     "    search_results = table.search(query_vector).limit(top_k)\n",
     "    return search_results\n",
