--- a/examples/RAG-On-PDF/main.ipynb
+++ b/examples/RAG-On-PDF/main.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We utilized this PDF: https://github.com/akashAD98/dummy_data/blob/main/FARM5CROPS_farmergpt.pdf,\n",
+        "We utilized this PDF: Dataset/FARM5CROPS_farmergpt.pdf,\n",
         " which contains crop variety information for sugarcane, turmeric, bamboo, cashew nuts, and more.\n",
         " This is a sample project designed to demonstrate how to build an application using LanceDB and LangChain\n",
         "The use case and prompts can be customized as needed to suit specific requirements"
