Update main.ipynb with  dataset download link

--- a/examples/RAG-On-PDF/main.ipynb
+++ b/examples/RAG-On-PDF/main.ipynb
@@ -344,6 +344,46 @@
       "execution_count": 7,
       "outputs": []
     },
+  
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download the sample pdf\n",
+        "!wget https://github.com/vectordb-recipes/examples/raw/main/RAG-On-PDF/Dataset/FARM5CROPS_farmergpt.pdf -O FARM5CROPS_farmergpt.pdf"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xtRI4pTPvahR",
+        "outputId": "02f3b2dc-4595-403e-e3d2-068fa4b73c4a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-12-20 11:04:42--  https://github.com/vectordb-recipes/examples/raw/main/RAG-On-PDF/Dataset/FARM5CROPS_farmergpt.pdf\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/vectordb-recipes/examples/main/RAG-On-PDF/Dataset/FARM5CROPS_farmergp.pdf [following]\n",
+            "--2024-12-20 11:04:43--  https://raw.githubusercontent.com/akashAD98/dummy_data/main/FARM5CROPS_farmergpt.pdf\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1398674 (1.3M) [application/octet-stream]\n",
+            "Saving to: ‘FARM5CROPS_farmergpt.pdf’\n",
+            "\n",
+            "FARM5CROPS_farmergp 100%[===================>]   1.33M  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2024-12-20 11:04:43 (34.5 MB/s) - ‘FARM5CROPS_farmergpt.pdf’ saved [1398674/1398674]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
